--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,17 +49,17 @@
     android:ems="10"
     android:id="@+id/login_edit_pwd"
     android:drawableStart="@android:drawable/ic_lock_idle_lock"
-    android:hint="@string/input_password"
-    android:layout_below="@+id/login_edit_username"
+    android:hint="@string/password"
+    android:layout_below="@+id/login_edit_phone"
     android:layout_alignParentStart="true" />
 
 <EditText
     android:layout_width="400dp"
     android:layout_height="60dp"
-    android:inputType="textPersonName"
-    android:id="@+id/login_edit_username"
+    android:inputType="phone"
+    android:id="@+id/login_edit_phone"
     android:drawableStart="@android:drawable/ic_menu_myplaces"
-    android:hint="@string/input_username"
+    android:hint="@string/phone"
     android:layout_below="@+id/logo"
     android:layout_alignParentStart="true"
     android:layout_marginTop="20dp" />
