完成乘客发起拼车、浏览附近拼车，但与服务器连接尚有问题

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,7 +40,7 @@
         android:layout_width="720dp"
         android:layout_height="173dp"
         android:layout_alignParentTop="true"
-        android:src="@drawable/car" />
+        android:src="@drawable/logo" />
 
 <EditText
     android:layout_width="400dp"
