--- a/app/src/main/res/layout/activity_choose_user_type.xml
+++ b/app/src/main/res/layout/activity_choose_user_type.xml
@@ -1,51 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChooseUserTypeActivity">
+    tools:context="com.tj.carpool.ChooseUserTypeActivity" >
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="285dp"
-        android:layout_marginEnd="167dp"
-        android:layout_marginStart="157dp"
-        android:layout_marginTop="162dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <RadioButton
-            android:id="@+id/btn_radio_passenger"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:checked="true"
-            android:text="@string/passenger" />
-
-        <RadioButton
-            android:id="@+id/btn_radio_driver"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/driver" />
-    </RadioGroup>
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="720dp"
+        android:layout_height="173dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/logo" />
 
     <Button
-        android:id="@+id/btn_next"
-        android:layout_width="wrap_content"
+        android:id="@+id/btn_passenger"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="160dp"
-        android:layout_marginEnd="149dp"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="124dp"
-        android:text="@string/next_step"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_centerInParent="true"
+        android:drawableStart="@drawable/img3"
+        android:text="@string/want_to_take"
+        android:textSize="20sp"
+        android:background="@drawable/style_button"/>
+
+    <Button
+        android:id="@+id/btn_driver"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="141dp"
+        android:background="@drawable/style_button"
+        android:drawableStart="@drawable/img1"
+        android:text="@string/want_to_drive"
+        android:textSize="20sp" />
+
+
+
+
+    <!--<RadioGroup-->
+        <!--android:id="@+id/radioGroup"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="285dp"-->
+        <!--android:layout_marginEnd="167dp"-->
+        <!--android:layout_marginStart="157dp"-->
+        <!--android:layout_marginTop="162dp"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent">-->
+
+        <!--<RadioButton-->
+            <!--android:id="@+id/btn_radio_passenger"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:checked="true"-->
+            <!--android:text="@string/passenger" />-->
+
+        <!--<RadioButton-->
+            <!--android:id="@+id/btn_radio_driver"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="@string/driver" />-->
+    <!--</RadioGroup>-->
+
+    <!--<Button-->
+        <!--android:id="@+id/btn_next"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="160dp"-->
+        <!--android:layout_marginEnd="149dp"-->
+        <!--android:layout_marginStart="147dp"-->
+        <!--android:layout_marginTop="124dp"-->
+        <!--android:text="@string/next_step"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/radioGroup" />-->
+</RelativeLayout>
