--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,6 +8,10 @@
             android:id="@+id/nav_userinfo"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/personal_info" />
+        <item
+            android:id="@+id/nav_signout"
+            android:icon="@android:drawable/ic_menu_close_clear_cancel"
+            android:title="@string/sign_out" />
     </group>
 
     <!--<item android:title="Communicate">-->
